# openenv-schema-evolution-env

./: .gitignore  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  environment.py  main.py  models.py  reward_bounds.py
app/graders/: __init__.py  grader.py
app/tasks/: __init__.py  task1_add_column.py  task2_split_table.py  task3_type_change.py
docs/superpowers/plans/: 2026-04-09-inference-controller.md
server/: __init__.py  app.py
tests/: __init__.py  test_env.py  test_inference.py
