[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-schema-evolution-env"
version = "0.1.0"
description = "Schema evolution OpenEnv environment."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.7.0",
    "openai==1.30.0",
    "requests==2.32.0",
    "httpx==0.27.0",
    "openenv-core>=0.2.3",
]

[project.scripts]
server = "app.main:main"
