[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-schema-evolution-env"
version = "0.1.0"
description = "Schema evolution OpenEnv environment."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "openai>=2.7.2",
    "requests==2.32.0",
    "httpx>=0.28.1",
    "openenv-core>=0.2.3",
]

[project.scripts]
server = "server.app:main"
